--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -6,69 +6,101 @@
 <title>Word Drop Express</title>
 <link rel="manifest" href="manifest.json">
 <style>
+  /* ===== Globais ===== */
   *{margin:0;padding:0;box-sizing:border-box}
-  html,body{width:100vw;height:100vh;background:url('../../../imagens/fundo.png') repeat;font-family:"Times New Roman",Times,serif}
+  html,body{
+    width:100vw;height:100vh;
+    background:url('../../../imagens/fundo.png') repeat;
+    font-family:"Times New Roman",Times,serif;
+  }
   html,body,#game-container{-webkit-user-select:none;user-select:none;touch-action:manipulation}
 
   :root{
-    /* altura fixa do rótulo + margem da janela do vagão (ajuste fino) */
+    /* Altura da faixa do trem (onde ficam os vagões) */
+    --trainH: 26vh;
+
+    /* Altura do rótulo (texto) e margens internas da “janela” do vagão */
     --labelH: clamp(22px,3.4vh,36px);
     --windowInset: clamp(6px,1.2vw,16px);
+
+    /* Faixa reservada para as rodas dentro do PNG do vagão */
+    --wheelPad: clamp(10px, 2.4vh, 24px);
+
+    /* Levantar visualmente os vagões (sem mudar o drop target) */
+    --lift: clamp(4px, 1.2vh, 16px);
+
+    /* Largura mínima “mental” de cada coluna em telas grandes (só estética) */
+    --colGap: clamp(6px,1vw,16px);
+    --sidePad: clamp(10px,2vw,24px);
   }
+
+  #rotate-overlay{
+    position:fixed;inset:0;background:rgba(0,0,0,.85);color:#fff;
+    display:none;justify-content:center;align-items:center;text-align:center;padding:1rem;z-index:3000
+  }
+  #rotate-overlay p{font-size:1.3rem;line-height:1.5}
 
   #game-container{position:relative;width:100%;height:100%;overflow:hidden}
 
-  /* Trem “pista” mínima só para posicionar a faixa de vagões */
+  /* ===== Faixa do trem (grid dos slots) ===== */
   #train{
     position:absolute;left:0;bottom:0;width:100%;
-    height:24vh; /* faixa ocupada pelos vagões */
+    height: var(--trainH);
     display:grid;
-    grid-template-columns: repeat(var(--num-wagons),1fr);
+    grid-template-columns: repeat(var(--num-wagons), 1fr); /* 1 coluna por palavra */
     align-items:end;
-    gap: clamp(6px,1vw,14px);
-    padding: 0 clamp(10px,2vw,24px) clamp(8px,1.2vw,18px);
+    gap: var(--colGap);
+    padding: 0 var(--sidePad) clamp(8px,1.2vw,18px);
     z-index:100;
   }
 
-  /* Cada vagão é um SLOT com fundo wagon.png (interior transparente) */
+  /* ===== Cada vagão (slot) =====
+     PNG do vagão é o fundo. Interior (janela) é transparente.  */
   .wagon{
     position:relative;
-    height: 86%;                 /* altura do vagão dentro da faixa */
-    display:flex; flex-direction:column; align-items:center; justify-content:flex-end;
-    background: url('wagon.png') no-repeat center/contain;
-    /* cria uma “janela” interna onde colocamos a imagem e o texto */
+    height: 92%;                            /* vagão maior */
+    background:url('wagon.png') no-repeat center/contain;
+    /* Janela interna do vagão (padding delimita a “área útil”):
+       - em cima/lados: windowInset
+       - embaixo: windowInset + labelH + wheelPad (rótulo + rodas) */
     padding:
-      calc(var(--windowInset))            /* topo */
-      calc(var(--windowInset))            /* direita */
-      calc(var(--windowInset) + var(--labelH))  /* base: reserva para o rótulo */
-      calc(var(--windowInset));           /* esquerda */
+      var(--windowInset)
+      var(--windowInset)
+      calc(var(--windowInset) + var(--labelH) + var(--wheelPad))
+      var(--windowInset);
+
+    /* Erguer um pouco o vagão para as rodas não ficarem tão embaixo */
+    transform: translateY(calc(-1 * var(--lift)));
   }
 
-  /* Área da imagem dentro da janela do vagão */
+  /* Área para a IMAGEM dentro da janela do vagão */
   .slot-img{
     position:absolute;
     top: var(--windowInset);
     left: var(--windowInset);
     right: var(--windowInset);
-    bottom: calc(var(--windowInset) + var(--labelH));
-    display:flex; align-items:center; justify-content:center;
+    bottom: calc(var(--windowInset) + var(--labelH) + var(--wheelPad));
+    display:flex;align-items:center;justify-content:center;
     overflow:hidden;
   }
   .slot-img img.paired{
-    max-width:100%; max-height:100%;
-    width:auto; height:auto; object-fit:contain; display:block; pointer-events:none;
+    max-width:100%;max-height:100%;
+    width:auto;height:auto;object-fit:contain;display:block;pointer-events:none;
     filter: drop-shadow(0 2px 2px rgba(0,0,0,.12));
   }
 
-  /* Rótulo SEMPRE visível na base da janela */
+  /* RÓTULO: sempre visível, agora acima das rodas */
   .word{
-    position:absolute; left: var(--windowInset); right: var(--windowInset);
-    bottom: var(--windowInset);
+    position:absolute;
+    left: var(--windowInset);
+    right: var(--windowInset);
+    bottom: calc(var(--windowInset) + var(--wheelPad) - 2px);
     height: calc(var(--labelH) - 6px);
-    display:flex; align-items:center; justify-content:center;
-    text-transform:uppercase; text-align:center; font-weight:700;
-    color:#1f2d3a; font-size: clamp(12px, calc((100vw / var(--num-wagons))*0.18), 22px);
-    background: linear-gradient(180deg, rgba(255,255,255,0.95), rgba(255,255,255,0.85));
+    display:flex;align-items:center;justify-content:center;
+    text-transform:uppercase;text-align:center;font-weight:700;
+    color:#1f2d3a;
+    font-size: clamp(12px, calc((100vw / var(--num-wagons))*0.18), 22px);
+    background: linear-gradient(180deg, rgba(255,255,255,0.96), rgba(255,255,255,0.88));
     border: 1px solid rgba(0,0,0,0.06);
     border-radius: 8px; box-shadow:0 2px 6px rgba(0,0,0,.08);
     pointer-events:none;
@@ -81,27 +113,32 @@
     100%{box-shadow:0 0 6px rgba(46,204,113,.35) inset}
   }
 
-  /* Balões */
+  /* ===== Balões ===== */
   .balloon{
-    position:absolute; width:clamp(50px,10vw,100px); height:clamp(60px,12vw,120px);
-    background:url('balloon.png') no-repeat center/contain; cursor:pointer; z-index:200; transition:transform .2s ease;
+    position:absolute;
+    width:clamp(50px,10vw,100px);
+    height:clamp(60px,12vw,120px);
+    background:url('balloon.png') no-repeat center/contain;
+    cursor:pointer;transition:transform .2s ease;z-index:200;
   }
   .balloon:hover{transform:scale(1.1)}
   .balloon img{
-    position:absolute; top:calc(90% + 0px); left:50%; transform:translateX(-50%);
-    width:clamp(40px,8vw,80px); height:clamp(40px,8vw,80px); object-fit:contain; pointer-events:none; z-index:201;
+    position:absolute;top:calc(90% + 0px);left:50%;transform:translateX(-50%);
+    width:clamp(40px,8vw,80px);height:clamp(40px,8vw,80px);object-fit:contain;pointer-events:none;z-index:201
   }
 
-  /* Feedback / Restart */
-  #feedback{position:absolute;top:45%;left:50%;transform:translate(-50%,-50%);background:rgba(231,76,60,.9);color:#fff;padding:15px 25px;border-radius:8px;font-size:1.2em;display:none;z-index:250}
-  #restart-button{position:absolute;top:10px;right:10px;padding:6px 12px;background:#2980b9;color:#fff;border:none;border-radius:8px;cursor:pointer;font-size:.9em;z-index:260;box-shadow:0 4px 8px rgba(0,0,0,.2)}
+  /* ===== Feedback / Botão ===== */
+  #feedback{
+    position:absolute;top:45%;left:50%;transform:translate(-50%,-50%);
+    background:rgba(231,76,60,.9);color:#fff;padding:15px 25px;border-radius:8px;font-size:1.2em;display:none;z-index:250
+  }
+  #restart-button{
+    position:absolute;top:10px;right:10px;padding:6px 12px;background:#2980b9;color:#fff;border:none;border-radius:8px;cursor:pointer;font-size:.9em;z-index:260;
+    box-shadow:0 4px 8px rgba(0,0,0,.2);transition:background-color .3s ease
+  }
   #restart-button:hover{background:#1c5980}
 
   .falling{position:absolute;width:clamp(40px,8vw,80px);height:clamp(40px,8vw,80px);object-fit:contain;pointer-events:none;z-index:150}
-
-  /* Overlay de rotação (mantido) */
-  #rotate-overlay{position:fixed;inset:0;background:rgba(0,0,0,.85);color:#fff;display:none;justify-content:center;align-items:center;text-align:center;padding:1rem;z-index:3000}
-  #rotate-overlay p{font-size:1.3rem;line-height:1.5}
 </style>
 </head>
 <body>
@@ -119,90 +156,110 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
   <script>
-    /* Firebase */
-    const firebaseConfig={apiKey:"AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",authDomain:"hannahenglishcourse.firebaseapp.com",databaseURL:"https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",projectId:"hannahenglishcourse",storageBucket:"hannahenglishcourse.appspot.com",messagingSenderId:"449818788486",appId:"1:449818788486:web:8a49d3f68591e6fb3f0707"};firebase.initializeApp(firebaseConfig);
+    /* ===== Firebase ===== */
+    const firebaseConfig={apiKey:"AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",authDomain:"hannahenglishcourse.firebaseapp.com",databaseURL:"https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",projectId:"hannahenglishcourse",storageBucket:"hannahenglishcourse.appspot.com",messagingSenderId:"449818788486",appId:"1:449818788486:web:8a49d3f68591e6fb3f0707"};
+    firebase.initializeApp(firebaseConfig);
 
     const gameContainer=document.getElementById('game-container');
     const train=document.getElementById('train');
     const feedback=document.getElementById('feedback');
+    const overlay=document.getElementById('rotate-overlay');
+
     let wordsList=[], imagesList=[], numWagons=0, correctCount=0;
     const balloons=[];
 
-    function checkOrientation(){ const stand=matchMedia('(display-mode: standalone)').matches||navigator.standalone===true; const ov=document.getElementById('rotate-overlay'); if(stand&&screen.orientation?.type){ov.style.display=screen.orientation.type.startsWith('portrait')?'flex':'none';return} ov.style.display=(innerHeight>innerWidth)?'flex':'none'}
-    addEventListener('resize',()=>{checkOrientation();});
-    addEventListener('orientationchange',()=>{checkOrientation();});
-    addEventListener('load',()=>{checkOrientation(); loadCardsData(init);});
+    /* ===== Orientation overlay ===== */
+    function checkOrientation(){
+      const stand=matchMedia('(display-mode: standalone)').matches||navigator.standalone===true;
+      if(stand && screen.orientation?.type){
+        overlay.style.display = screen.orientation.type.startsWith('portrait') ? 'flex' : 'none'; return;
+      }
+      overlay.style.display = (innerHeight > innerWidth) ? 'flex' : 'none';
+    }
+    addEventListener('resize',checkOrientation);
+    addEventListener('orientationchange',checkOrientation);
+    addEventListener('load',()=>{ checkOrientation(); loadCardsData(init); });
 
-    function getParams(){ const p=new URLSearchParams(location.search); return {level:p.get('level'), unit:p.get('unit'), fase:p.get('fase')}; }
-    function preload(src){return new Promise((res,rej)=>{const im=new Image();im.onload=res;im.onerror=rej;im.src=src;});}
+    /* ===== Helpers ===== */
+    function getParams(){ const p=new URLSearchParams(location.search); return {level:p.get('level'),unit:p.get('unit'),fase:p.get('fase')}; }
+    function preload(src){ return new Promise((res,rej)=>{ const im=new Image(); im.onload=res; im.onerror=rej; im.src=src; }); }
+    function rand(a,b){ return a + Math.random()*(b-a); }
 
+    /* ===== Data load ===== */
     function loadCardsData(cb){
       const {level,unit}=getParams(); if(!level||!unit){console.error("Parâmetros 'level' e 'unit' são obrigatórios na URL."); return;}
       const wordsPath=`../../${level}/${unit}/data1/words.txt`;
       const imagePathTemplate=`../../${level}/${unit}/data1/imagens/imagem`;
+
       fetch(wordsPath).then(r=>{if(!r.ok)throw new Error('Erro ao carregar '+wordsPath);return r.text();})
-      .then(t=>{
-        wordsList=t.split('\n').map(s=>s.trim()).filter(Boolean);
-        numWagons=wordsList.length;
-        imagesList=wordsList.map((w,i)=>({src:`${imagePathTemplate}${i+1}.png`,pair:`pair${i+1}`,word:w}));
-        return Promise.all([preload('wagon.png'), preload('balloon.png'), ...imagesList.map(x=>preload(x.src))]);
-      })
-      .then(()=>cb())
-      .catch(e=>console.error(e));
+        .then(t=>{
+          wordsList = t.split('\n').map(s=>s.trim()).filter(Boolean);
+          numWagons = wordsList.length;
+          imagesList = wordsList.map((w,i)=>({src:`${imagePathTemplate}${i+1}.png`,pair:`pair${i+1}`,word:w}));
+          return Promise.all([preload('wagon.png'), preload('balloon.png'), ...imagesList.map(x=>preload(x.src))]);
+        })
+        .then(()=>cb())
+        .catch(e=>console.error(e));
     }
 
+    /* ===== Init ===== */
     function init(){
       correctCount=0; train.innerHTML=''; balloons.length=0;
       train.style.setProperty('--num-wagons', numWagons);
 
-      // cria slots (vagões independentes)
+      // cria slots (vagões)
       wordsList.forEach((word,i)=>{
         const slot=document.createElement('div'); slot.className='wagon'; slot.dataset.pair=`pair${i+1}`;
-
         const imgBox=document.createElement('div'); imgBox.className='slot-img';
         const label=document.createElement('div'); label.className='word'; label.textContent=word;
-
         slot.appendChild(imgBox); slot.appendChild(label); train.appendChild(slot);
       });
 
-      // cria balões
+      // balões
       imagesList.forEach(obj=>createBalloon(obj));
       requestAnimationFrame(animateBalloons);
     }
 
+    /* ===== Balões ===== */
     function createBalloon(obj){
       const b=document.createElement('div'); b.className='balloon'; b.dataset.pair=obj.pair; gameContainer.appendChild(b);
       const r=b.getBoundingClientRect(); const w=r.width; const top=innerHeight*0.05; const x=Math.floor(Math.random()*(innerWidth-w-20))+10;
       b.style.top=top+'px'; b.style.left=x+'px';
       const img=document.createElement('img'); img.src=obj.src; b.appendChild(img);
       b.addEventListener('click',()=>popBalloon(b,obj));
-      b._float={speedX:rand(0.03,0.07), dir:Math.random()<0.5?-1:1, amp:rand(10,30), freq:rand(0.002,0.005), phase:Math.random()*Math.PI*2, base:top, w:w, last:null};
+      b._float={speedX:rand(0.03,0.07),dir:Math.random()<0.5?-1:1,amp:rand(10,30),freq:rand(0.002,0.005),phase:Math.random()*Math.PI*2,base:top,w:w,last:null};
       balloons.push(b);
     }
-    function rand(a,b){return a+Math.random()*(b-a);}
 
     function popBalloon(b,obj){
       const s=b.getBoundingClientRect(); b.remove();
       const idx=balloons.indexOf(b); if(idx!==-1) balloons.splice(idx,1);
       const f=document.createElement('img'); f.src=obj.src; f.className='falling'; gameContainer.appendChild(f);
-      const r=f.getBoundingClientRect(); f.style.left=(s.left+(s.width-r.width)/2)+'px'; f.style.top=s.top+'px'; f.dataset.pair=obj.pair;
+      const r=f.getBoundingClientRect();
+      f.style.left=(s.left + (s.width - r.width)/2) + 'px';
+      f.style.top = s.top + 'px';
+      f.dataset.pair=obj.pair;
       animateFall(f);
     }
 
     function animateFall(el){
-      const SPEED=Math.max(250,innerHeight*0.45); let last=null;
+      const SPEED=Math.max(250, innerHeight*0.45); let last=null;
       function step(ts){
         if(last==null) last=ts; const dt=(ts-last)/1000; last=ts;
-        el.style.top=(parseFloat(el.style.top||'0')+SPEED*dt)+'px';
+        el.style.top=(parseFloat(el.style.top||'0') + SPEED*dt) + 'px';
         const trainRect=train.getBoundingClientRect(); const ir=el.getBoundingClientRect();
-        if(ir.bottom>=trainRect.top){
-          const cx=ir.left+ir.width/2; const slots=[...train.querySelectorAll('.wagon')];
-          const landed=slots.find(s=>{const r=s.getBoundingClientRect(); return cx>=r.left && cx<=r.right;});
-          if(landed){ landed.dataset.pair===el.dataset.pair ? correctDrop(landed,el) : wrongDrop(el); }
-          else wrongDrop(el);
+
+        if(ir.bottom >= trainRect.top){
+          const cx=ir.left + ir.width/2;
+          const slots=[...train.querySelectorAll('.wagon')];
+          const landed=slots.find(s=>{ const r=s.getBoundingClientRect(); return cx>=r.left && cx<=r.right; });
+          if(landed){
+            if(landed.dataset.pair===el.dataset.pair) correctDrop(landed, el);
+            else wrongDrop(el);
+          } else wrongDrop(el);
           return;
         }
-        if(ir.top>innerHeight){ wrongDrop(el); return; }
+        if(ir.top > innerHeight){ wrongDrop(el); return; }
         requestAnimationFrame(step);
       }
       requestAnimationFrame(step);
@@ -217,18 +274,20 @@
       if(++correctCount===numWagons){ alert('Congratulations! You completed this phase.'); updateNextPhaseAuth(); }
     }
 
+    /* ===== Erro / feedback ===== */
     let fbTimer=null;
     function showFeedback(){ feedback.style.display='block'; clearTimeout(fbTimer); fbTimer=setTimeout(()=>feedback.style.display='none',800); }
     function wrongDrop(el){ showFeedback(); const p=el.dataset.pair; el.remove(); const obj=imagesList.find(x=>x.pair===p); if(obj) createBalloon(obj); }
 
-    /* ====== progresso (igual antes, simplificado) ====== */
+    /* ===== Progresso ===== */
     function updateNextPhaseAuth(){
       const u=firebase.auth().currentUser;
       if(u){ updateNextPhase(u.uid); return; }
       const unsub=firebase.auth().onAuthStateChanged(x=>{ if(x) updateNextPhase(x.uid); unsub&&unsub(); });
     }
     async function updateNextPhase(uid){
-      const q=new URLSearchParams(location.search); const fase=q.get('fase'); const level=q.get('level'); const unit=q.get('unit');
+      const q=new URLSearchParams(location.search);
+      const fase=q.get('fase'), level=q.get('level'), unit=q.get('unit');
       const db=firebase.database().ref(`usuarios/${uid}/progresso/${level}/${unit}`);
       try{
         if(fase==="last"){
@@ -244,18 +303,28 @@
       }catch(e){console.error(e);}
     }
 
+    /* ===== Animação dos balões ===== */
     function animateBalloons(ts){
       for(const b of balloons){
-        const p=b._float; if(!p.last) p.last=ts; const d=ts-p.last; p.last=ts;
-        let left=parseFloat(b.style.left); left += p.speedX*p.dir*d;
-        if(left>innerWidth) left=-p.w; if(left<-p.w) left=innerWidth;
-        const top=p.base + p.amp*Math.sin(p.phase + p.freq*ts);
+        const p=b._float; if(!p.last) p.last=ts;
+        const d=ts - p.last; p.last=ts;
+        let left=parseFloat(b.style.left);
+        left += p.speedX * p.dir * d;
+        if(left > innerWidth) left = -p.w;
+        if(left < -p.w) left = innerWidth;
+        const top = p.base + p.amp * Math.sin(p.phase + p.freq * ts);
         b.style.left=left+'px'; b.style.top=top+'px';
       }
       requestAnimationFrame(animateBalloons);
     }
 
-    function restartGame(){ correctCount=0; gameContainer.querySelectorAll('.falling').forEach(i=>i.remove()); train.querySelectorAll('.slot-img').forEach(b=>b.innerHTML=''); train.querySelectorAll('.wagon').forEach(w=>w.classList.remove('correct')); }
+    /* ===== Restart ===== */
+    function restartGame(){
+      correctCount=0;
+      gameContainer.querySelectorAll('.falling').forEach(i=>i.remove());
+      train.querySelectorAll('.slot-img').forEach(b=>b.innerHTML='');
+      train.querySelectorAll('.wagon').forEach(w=>w.classList.remove('correct'));
+    }
   </script>
 </body>
 </html>
