--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -16,23 +16,28 @@
   html,body,#game-container{-webkit-user-select:none;user-select:none;touch-action:manipulation}
 
   :root{
-    /* Altura da FAIXA do trem em vh (número) */
-    --trainH: 34;            /* ↑ aumente para vagões maiores (ex: 40, 44) */
+    /* Altura da FAIXA do trem (número em vh) → deixa os vagões MAIORES */
+    --trainH: 40;              /* ajuste livre: 36–48 costuma ficar ótimo */
 
-    /* Proporção da altura do VAGÃO vs. faixa (0–1) */
-    --wagonFactor: 0.96;     /* ↑ deixa o vagão mais alto dentro da faixa */
+    /* Proporção da altura do vagão dentro da faixa (0–1) */
+    --wagonFactor: 0.96;       /* 0.96 ocupa quase toda a faixa */
 
-    /* “Lift” (quanto o vagão sobe visualmente), em vh */
-    --liftVH: 2.4;           /* ↑ sobe o vagão para as rodas não encostarem no texto */
+    /* Sobe levemente o vagão (em vh) só para dar respiro visual */
+    --liftVH: 1.0;             /* se não quiser subir nada: 0 */
 
     /* Reservas internas */
-    --labelH: clamp(22px, 3.6vh, 40px);  /* altura da faixa do texto */
-    --windowInset: clamp(8px, 1.4vw, 18px); /* margem da janela do vagão */
-    --wheelPadVH: 3.2;       /* espaço extra acima das rodas, em vh */
+    --labelH: clamp(22px, 3.6vh, 40px);     /* faixa do texto */
+    --windowInset: clamp(12px, 1.6vw, 22px);/* margem da janela do vagão */
 
-    /* Espaçamentos laterais/entre colunas */
-    --colGap: clamp(10px, 1.4vw, 22px);
-    --sidePad: clamp(14px, 2.4vw, 28px);
+    /* Espaço acima das rodas (em vh) para o texto nunca encostar */
+    --wheelPadVH: 3.8;
+
+    /* Segurança extra para a IMAGEM dentro da janela (evita cobrir a moldura) */
+    --imgSafePad: clamp(8px, 1.1vw, 16px);
+
+    /* Espaços laterais/entre colunas */
+    --colGap: clamp(8px, 1vw, 16px);
+    --sidePad: clamp(10px, 1.6vw, 22px);
   }
 
   #rotate-overlay{
@@ -55,24 +60,27 @@
     z-index:100;
   }
 
-  /* ===== Cada vagão (slot) ===== */
+  /* ===== Cada vagão (slot) =====
+     O PNG do vagão é o fundo; a “janela” é a área útil. */
   .wagon{
     position:relative;
     height: calc(var(--trainH) * var(--wagonFactor) * 1vh);
     background:url('wagon.png') no-repeat center/contain;
 
-    /* Janela útil do vagão */
+    /* Janela útil do vagão:
+       topo/lados: windowInset
+       base: windowInset + labelH + wheelPad (rodas)  */
     padding:
       var(--windowInset)
       var(--windowInset)
       calc(var(--windowInset) + var(--labelH) + (var(--wheelPadVH) * 1vh))
       var(--windowInset);
 
-    /* Sobe o vagão para afastar rodas do texto */
+    /* Sobe levemente o vagão para dar respiro a partir do chão */
     transform: translateY(calc(-1 * var(--liftVH) * 1vh));
   }
 
-  /* Área da imagem dentro da janela */
+  /* Área da IMAGEM dentro da janela */
   .slot-img{
     position:absolute;
     top: var(--windowInset);
@@ -83,7 +91,9 @@
     overflow:hidden;
   }
   .slot-img img.paired{
-    max-width:100%;max-height:100%;
+    /* Limites reais: nunca encosta na moldura graças ao imgSafePad */
+    max-width:  calc(100% - var(--imgSafePad)*2);
+    max-height: calc(100% - var(--imgSafePad)*2);
     width:auto;height:auto;object-fit:contain;display:block;pointer-events:none;
     filter: drop-shadow(0 2px 2px rgba(0,0,0,.12));
   }
